[gd_scene load_steps=16 format=3 uid="uid://dhnd32hkwlpcf"]

[ext_resource type="Script" uid="uid://420fgu5mxmh6" path="res://scripts/core/register.gd" id="1_7003e"]
[ext_resource type="Texture2D" uid="uid://crjkw60niqu7d" path="res://assets/textures/physing1.jpg" id="2_0fa3p"]
[ext_resource type="Texture2D" uid="uid://cmvipyc6016iq" path="res://assets/textures/0-STATIC/1.png" id="3_m5nqj"]
[ext_resource type="Texture2D" uid="uid://dgd342ohfdrn5" path="res://assets/textures/0-STATIC/2.png" id="4_pk8se"]
[ext_resource type="Texture2D" uid="uid://bk1481bsp1fuy" path="res://assets/textures/0-STATIC/3.png" id="5_r816b"]
[ext_resource type="Texture2D" uid="uid://bn2j2kygv5ai0" path="res://assets/textures/0-STATIC/4.png" id="6_lx5fb"]
[ext_resource type="Texture2D" uid="uid://c73jgeiwpc1xt" path="res://assets/textures/0-STATIC/5.png" id="7_hepmu"]
[ext_resource type="Texture2D" uid="uid://dmjdjq7wc6tkf" path="res://assets/textures/0-STATIC/6.png" id="8_gii6v"]
[ext_resource type="Texture2D" uid="uid://g2c0ltyhc05g" path="res://assets/textures/0-STATIC/7.png" id="9_mukv6"]
[ext_resource type="Texture2D" uid="uid://bsw6q1284vup1" path="res://assets/textures/0-STATIC/8.png" id="10_yj5yv"]
[ext_resource type="Script" uid="uid://cabimrgaihefu" path="res://scripts/ui/static1.gd" id="11_huql3"]

[sub_resource type="SpriteFrames" id="SpriteFrames_t1ma1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_m5nqj")
}, {
"duration": 1.0,
"texture": ExtResource("4_pk8se")
}, {
"duration": 1.0,
"texture": ExtResource("5_r816b")
}, {
"duration": 1.0,
"texture": ExtResource("6_lx5fb")
}, {
"duration": 1.0,
"texture": ExtResource("7_hepmu")
}, {
"duration": 1.0,
"texture": ExtResource("8_gii6v")
}, {
"duration": 1.0,
"texture": ExtResource("9_mukv6")
}, {
"duration": 1.0,
"texture": ExtResource("10_yj5yv")
}],
"loop": true,
"name": &"movimiento",
"speed": 25.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y4e4u"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.8, 0.8, 0.8, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lmeoh"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0pw3f"]
bg_color = Color(0.21950099, 0.21950105, 0.21950087, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_detail = 1

[node name="Control" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7003e")

[node name="textureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -2.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0fa3p")
expand_mode = 1
stretch_mode = 4

[node name="estatica" type="AnimatedSprite2D" parent="."]
modulate = Color(1, 1, 1, 0.45882353)
position = Vector2(718.5001, 540.00006)
scale = Vector2(1.1195314, 1.4972223)
sprite_frames = SubResource("SpriteFrames_t1ma1")
animation = &"movimiento"
frame = 7
frame_progress = 0.6876476
script = ExtResource("11_huql3")

[node name="colorReactCuadro" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -262.0
offset_top = -191.0
offset_right = 260.0
offset_bottom = 261.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.44313726, 0.44313726, 0.44313726, 0.6039216)

[node name="lineEditAntivirus" type="LineEdit" parent="colorReactCuadro"]
layout_mode = 0
offset_left = 31.0
offset_top = 253.0
offset_right = 494.0
offset_bottom = 329.0
theme_override_font_sizes/font_size = 26
placeholder_text = "   Antivirus..."

[node name="buttonIngreNombJuga" type="Button" parent="colorReactCuadro"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -227.0
offset_top = 107.0
offset_right = 221.0
offset_bottom = 217.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_y4e4u")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_lmeoh")
theme_override_styles/pressed = SubResource("StyleBoxFlat_lmeoh")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_lmeoh")
theme_override_styles/hover = SubResource("StyleBoxFlat_lmeoh")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_lmeoh")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_lmeoh")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_lmeoh")
theme_override_styles/disabled = SubResource("StyleBoxFlat_lmeoh")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_lmeoh")
theme_override_styles/focus = SubResource("StyleBoxFlat_lmeoh")
text = "Ingresa tu nombre de jugador"
autowrap_mode = 3

[node name="buttonRegistro" type="Button" parent="colorReactCuadro"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -204.0
offset_top = 13.0
offset_right = 246.0
offset_bottom = 110.04936
grow_horizontal = 2
scale = Vector2(0.8807454, 0.8861468)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_0pw3f")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_0pw3f")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0pw3f")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_0pw3f")
theme_override_styles/hover = SubResource("StyleBoxFlat_0pw3f")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_0pw3f")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_0pw3f")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_0pw3f")
theme_override_styles/disabled = SubResource("StyleBoxFlat_0pw3f")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_0pw3f")
theme_override_styles/focus = SubResource("StyleBoxFlat_0pw3f")
text = "Registro"
autowrap_mode = 3

[node name="buttonOK" type="Button" parent="colorReactCuadro"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.87100005
anchor_top = -0.771
anchor_right = 1.8800001
anchor_bottom = 1.618
offset_left = 609.6621
offset_top = 704.49207
offset_right = -609.11743
offset_bottom = -298.59927
grow_horizontal = 2
scale = Vector2(0.8807454, 0.8861468)
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_0pw3f")
text = "OK"
autowrap_mode = 3

[connection signal="pressed" from="colorReactCuadro/buttonOK" to="." method="_on_button_ok_pressed"]
